Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-17923

Choosing an entry from the drop-down list of kanji alternatives puts the text cursor in the wrong place when entering Japanese text in a QTextEdit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.7.2
    • GUI: Text handling
    • None
    • Mac OS X
    • bfcd2cabf7b5bc15105c968f80f71132efb65759

    Description

      To reproduce (Mac only):

      1. Run the text edit section of the Qt demo app on Mac OS X (or use any QTextEdit)
      2. Select Japanese Hiragana input method
      3. Type some text (eg. "yamaha")
      4. Press Space to change to another candidate in the IME

      EXPECTED: The text should change, but the cursor should remain at the right-hand end of the text.
      ACTUAL: The text changes, but the cursor moves to the left of the text you've input.

      5. Press Return to accept the current candidate

      EXPECTED: You should be able to carry on typing.
      ACTUAL: You can't, because the cursor is at the left of the text.

      Note: I tried applying the patch for QTBUG-2064, which is useful but does not fix this problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            jlarcombe James Larcombe
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes