Place cursor at the end of the selected range

Selected range is the range of the text that has been edited with
input method, but not yet committed, normally the cursor should be
placed that the end of it (or hidden).

Task-number: QTBUG-17923
Reviewed-by: Morten Sørvig